--- a/package.json
+++ b/package.json
@@ -10,6 +10,17 @@
     "start:sanity": "cp .env ./studio/.env.development && cd studio && sanity start",
     "postinstall": "lerna bootstrap"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "prettier --write",
+      "git add"
+    ]
+  },
   "dependencies": {
     "@sanity/block-content-to-react": "2.0.7",
     "@sanity/client": "1.149.18",
@@ -26,8 +37,13 @@
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^2.3.0",
     "@sanity/cli": "^2.0.5",
+    "eslint": "^7.16.0",
+    "eslint-config-prettier": "^7.1.0",
+    "husky": "^4.3.6",
     "lerna": "^3.22.1",
+    "lint-staged": "^10.5.3",
     "postcss-preset-env": "^6.7.0",
+    "prettier": "^2.2.1",
     "tailwindcss": "^1.5.2"
   }
 }
