--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start:web": "next start",
     "build:sanity": "cd studio && sanity build ../public/studio -y && cd ..",
     "start:sanity": "cp .env ./studio/.env.development && cd studio && sanity start",
-    "postinstall": "lerna bootstrap"
+    "postinstall": "lerna bootstrap",
+    "eslint": "eslint './**/*.{js,jsx,ts,tsx}'"
   },
   "husky": {
     "hooks": {
@@ -18,6 +19,7 @@
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
       "prettier --write",
+      "eslint .",
       "git add"
     ]
   },
@@ -35,6 +37,8 @@
     "next-sanity": "^0.1.5"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/eslint-parser": "^7.12.1",
     "@fullhuman/postcss-purgecss": "^2.3.0",
     "@sanity/cli": "^2.0.5",
     "eslint": "^7.16.0",
