--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build:sanity": "cd studio && sanity build ../public/studio -y && cd ..",
     "start:sanity": "cp .env ./studio/.env.development && cd studio && sanity start",
     "postinstall": "lerna bootstrap",
-    "eslint": "eslint './**/*.{js,jsx,ts,tsx}'"
+    "eslint": "eslint './**/*.{js,jsx,ts,tsx}'",
+    "release": "HUSKY_SKIP_HOOKS=1 standard-version"
   },
   "husky": {
     "hooks": {
