--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:sanity": "cd studio && sanity build ../public/studio -y && cd ..",
     "start:sanity": "cp .env ./studio/.env.development && cd studio && sanity start",
     "postinstall": "lerna bootstrap",
-    "eslint": "eslint './**/*.{js,jsx,ts,tsx}'",
+    "eslint": "eslint '**/*.{js,jsx,ts,tsx}'",
     "release": "HUSKY_SKIP_HOOKS=1 standard-version"
   },
   "husky": {
@@ -40,8 +40,6 @@
     "next-sanity": "^0.1.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/eslint-parser": "^7.12.1",
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
     "@fullhuman/postcss-purgecss": "^2.3.0",
@@ -49,7 +47,12 @@
     "commitizen": "^4.2.2",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^7.16.0",
+    "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^4.3.6",
     "lerna": "^3.22.1",
     "lint-staged": "^10.5.3",
