--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "lint-staged": "^10.5.3",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.2.1",
+    "standard-version": "^9.0.0",
     "tailwindcss": "^1.5.2"
   }
 }
