--- a/package.json
+++ b/package.json
@@ -27,17 +27,23 @@
     ]
   },
   "dependencies": {
+    "@emotion/react": "^11.1.4",
+    "@emotion/styled": "^11.0.0",
     "@sanity/block-content-to-react": "2.0.7",
     "@sanity/client": "1.149.18",
     "@sanity/image-url": "0.140.19",
     "classnames": "2.2.6",
     "date-fns": "2.15.0",
+    "framer-motion": "^3.1.1",
     "next": "latest",
+    "next-sanity": "^0.1.5",
+    "phosphor-react": "^1.1.2",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.7.0",
     "swr": "^0.2.3",
-    "next-sanity": "^0.1.5"
+    "twin.macro": "^2.0.7"
   },
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
