--- a/studio/package.json
+++ b/studio/package.json
@@ -11,6 +11,7 @@
 	],
 	"dependencies": {
 		"@sanity/base": "^2.0.5",
+		"@sanity/code-input": "^2.1.0",
 		"@sanity/components": "^2.0.5",
 		"@sanity/core": "^2.0.5",
 		"@sanity/default-layout": "^2.0.5",
