--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
       "prettier --write",
-      "eslint .",
       "git add"
     ]
   },
@@ -32,6 +31,7 @@
     "@sanity/block-content-to-react": "2.0.7",
     "@sanity/client": "1.149.18",
     "@sanity/image-url": "0.140.19",
+    "babel-plugin-macros": "^3.0.1",
     "classnames": "2.2.6",
     "date-fns": "2.15.0",
     "framer-motion": "^3.1.1",
