--- a/package.json
+++ b/package.json
@@ -48,8 +48,8 @@
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
-    "@fullhuman/postcss-purgecss": "^2.3.0",
     "@sanity/cli": "^2.0.5",
+    "autoprefix": "^1.0.1",
     "commitizen": "^4.2.2",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^7.16.0",
@@ -62,9 +62,10 @@
     "husky": "^4.3.6",
     "lerna": "^3.22.1",
     "lint-staged": "^10.5.3",
+    "postcss": "^8.2.2",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.2.1",
     "standard-version": "^9.0.0",
-    "tailwindcss": "^1.5.2"
+    "tailwindcss": "^2.0.2"
   }
 }
