--- a/.github/workflows/standard-version.yml
+++ b/.github/workflows/standard-version.yml
@@ -1,8 +1,9 @@
-name: Node.js CI
+name: Standard version CI
 
 on:
-  pull_request:
+  push:
     branches:
+      - github-actions
       - master
 
 jobs:
@@ -10,16 +11,19 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [8.x, 10.x, 12.x]
-
     steps:
     - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Use Node.js
       uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
     - run: npm install standard-version@latest
+    - name: Set up git credentials
+      run: |
+        git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+        git config --local user.name "github-actions[bot]"
     - run: npm run release
-    - run: git push --follow-tags origin master
+    - name: Push changes
+      uses: ad-m/github-push-action@master
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        branch: ${{ github.ref }}
+      
