--- a/.github/workflows/standard-version.yml
+++ b/.github/workflows/standard-version.yml
@@ -18,8 +18,8 @@ jobs:
     - run: npm install standard-version@latest
     - name: Set up git credentials
       run: |
-        git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
-        git config --local user.name "github-actions[bot]"
+        git config --local user.email "action@github.com"
+        git config --local user.name "GitHub Action"
     - run: npm run release
     - name: Push changes
       uses: ad-m/github-push-action@master
