--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.7.0",
+    "react-icons": "^4.1.0",
     "swr": "^0.2.3",
     "twin.macro": "^2.0.7"
   },
